force-app/main/default/objects/User_Unidad__c/User_Unidad__c.object-meta.xml
<CustomObject>
    <label>User Unidad</label>
    <nameField>
        <label>User Unidad Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Unidades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>