force-app/main/default/objects/User_Unidad__c/fields/Tiempo_Estimado__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_Estimado__c</fullName>
    <label>Tiempo Estimado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>