force-app/main/default/objects/User_Unidad__c/fields/Unidad__c.field-meta.xml
<CustomField>
    <fullName>Unidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidad</label>
    <referenceTo>Unidad__c</referenceTo>
    <relationshipLabel>User Unidades</relationshipLabel>
    <relationshipName>User_Unidades1</relationshipName>
    <type>Lookup</type>
</CustomField>