force-app/main/default/objects/User_Unidad__c/fields/User_Modulo__c.field-meta.xml
<CustomField>
    <fullName>User_Modulo__c</fullName>
    <label>User Modulo</label>
    <referenceTo>User_Modulo__c</referenceTo>
    <relationshipLabel>User Unidades</relationshipLabel>
    <relationshipName>User_Unidades</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>